Add ignore rules for unnecessary folders, certificates, and manifest files added version details and self signed certificate to build

--- a/config.json
+++ b/config.json
@@ -46,6 +46,10 @@
    "value": false
   },
   {
+   "optionDest": "version_file",
+   "value": "C:/Users/Ludo/Desktop/proxy-settings/version.rc"
+  },
+  {
    "optionDest": "embed_manifest",
    "value": true
   },
